# Atlassian-Hound

./: .coveragerc  .env.template  .gitignore  README.md  atlassian_hound.py  houndpaint.py  model.json  pyproject.toml  register_bloodhound_plugin.py  requirements.txt
collectors/: application_roles_collector.py  apps_collector.py  confluence_restrictions_collector.py  global_permissions_collector.py  groups_collector.py  issues_collector.py  jsm_collector.py  org_admin_collector.py  permissions_collector.py  projects_collector.py  security_schemes_collector.py  spaces_collector.py  teams_collector.py  users_collector.py  watchers_collector.py  webhooks_collector.py
utils/: __init__.py  analyzers.py  attack_mapper.py  bhcompat.py  common.py  config_loader.py  diagnostics.py  environment.py  export.py  generate_model.py  http.py  model_template.py  normalizers.py
